@@ -1,0 +1,43 @@
+/*
+ * $Id$
+ *
+ * Copyright (C) 2003 ETC s.r.o.
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
+ * 02111-1307, USA.
+ *
+ * Written by Marcel Telka <marcel@telka.sk>, 2003.
+ *
+ */
+
+#include <sysdep.h>
+
+#include <stdio.h>
+#include <unistd.h>
+
+#ifndef HAVE_GETLINE
+
+#ifndef HAVE_GETDELIM
+ssize_t getdelim (char **lineptr, size_t *n, int delimiter,
+                          FILE *stream);
+#endif /* HAVE_GETDELIM */
+
+ssize_t
+getline (char **lineptr, size_t *n, FILE *stream)
+{
+    return getdelim (lineptr, n, '\n', stream);
+}
+
+#endif /* HAVE_GETLINE */
